JBIDE-26742 - Create RedDeer methods for working with submodules of a module deployed to server.
Signed-off-by: Zbynek Cervinka <zcervink@redhat.com>

--- a/tests/org.eclipse.reddeer.eclipse.test/plugin.xml
+++ b/tests/org.eclipse.reddeer.eclipse.test/plugin.xml
@@ -17,6 +17,7 @@
    		<runtimeType id="org.eclipse.reddeer.eclipse.test.wst.server.testserverruntime" name="Test runtime" description="Testing runtime" facetRuntimeComponent="org.eclipse.wst.server.http.runtime" facetRuntimeVersion="1.0" class="org.eclipse.reddeer.eclipse.test.wst.server.ui.TestServerRuntime">
    			<moduleType types="PHP" versions="1.0"/>
    			<moduleType types="wst.web" versions="1.0"/>
+   			<moduleType types="jst.ear" versions="7.0"/>
    		</runtimeType>
    		<runtimeType id="org.eclipse.reddeer.eclipse.test.wst.server.testserverruntime2" name="Test runtime 2" description="Second testing runtime" facetRuntimeComponent="org.eclipse.wst.server.http.runtime" facetRuntimeVersion="1.0" class="org.eclipse.reddeer.eclipse.test.wst.server.ui.TestServerRuntime2">
    		</runtimeType>
