--- a/features/org.eclipse.reddeer.tests.feature/feature.properties
+++ b/features/org.eclipse.reddeer.tests.feature/feature.properties
@@ -61,7 +61,7 @@ downloadable archives ("Downloads").\n\
     include plug-ins ("Plug-ins"), plug-in fragments ("Fragments"), and\n\
     features ("Features").\n\
 -   Each Plug-in or Fragment may be packaged as a sub-directory or JAR\n\
-    (Java(TM) ARchive) in a directory named "plugins".\n\
+    (Java\u2122 ARchive) in a directory named "plugins".\n\
 -   A Feature is a bundle of one or more Plug-ins and/or Fragments and\n\
     associated material. Each Feature may be packaged as a sub-directory in a\n\
     directory named "features". Within a Feature, files named "feature.xml" may\n\
