--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,7 @@
 		<tychoExtrasVersion>${tycho-version}</tychoExtrasVersion>
 		<eclipse-target-site>http://download.eclipse.org/staging/2019-12/</eclipse-target-site>
 		<swtbot-update-site>http://download.eclipse.org/technology/swtbot/snapshots/</swtbot-update-site>
-		<eclipse-orbit-update-site>https://download.eclipse.org/tools/orbit/downloads/drops/S20191007144714/repository</eclipse-orbit-update-site>
+		<eclipse-orbit-update-site>https://download.eclipse.org/tools/orbit/downloads/drops/S20191118194249/repository</eclipse-orbit-update-site>
 		<cbi-repo-site>https://repo.eclipse.org/content/repositories/cbi-releases/</cbi-repo-site>
 		<download-plugin-version>1.2.1</download-plugin-version>
 		<java.target.version>1.8</java.target.version>
@@ -110,7 +110,7 @@
 							<arch>x86_64</arch>
 						</environment>
 					</environments>
-					<includePackedArtifacts>false</includePackedArtifacts>
+					<includePackedArtifacts>true</includePackedArtifacts>
 					<dependency-resolution>
 						<extraRequirements>
 							<requirement>
