--- a/tests/org.eclipse.reddeer.eclipse.test/pom.xml
+++ b/tests/org.eclipse.reddeer.eclipse.test/pom.xml
@@ -32,9 +32,9 @@
 
 	<dependencies>
 		<dependency>
-			<groupId>hsqldb</groupId>
+			<groupId>org.hsqldb</groupId>
 			<artifactId>hsqldb</artifactId>
-			<version>1.8.0.10</version>
+			<version>2.3.0</version>
 		</dependency>
 	</dependencies>
 
@@ -54,9 +54,9 @@
 						<configuration>
 							<artifactItems>
 								<artifactItem>
-									<groupId>hsqldb</groupId>
+									<groupId>org.hsqldb</groupId>
 									<artifactId>hsqldb</artifactId>
-									<version>1.8.0.10</version>
+									<version>2.3.0</version>
 									<type>jar</type>
 									<outputDirectory>${project.build.directory}/lib</outputDirectory>
 								</artifactItem>
