--- a/tests/pom.xml
+++ b/tests/pom.xml
@@ -51,6 +51,7 @@
 		<module>org.eclipse.reddeer.requirements.test</module>
 		<module>org.eclipse.reddeer.ui.test</module>
 		<module>org.eclipse.reddeer.e4.workbench.test</module>
+		<module>org.eclipse.reddeer.integration.test</module>
 	</modules>
 	<build>
 		<plugins>
