--- a/archetype/src/main/resources/archetype-resources/pom.xml
+++ b/archetype/src/main/resources/archetype-resources/pom.xml
@@ -3,9 +3,9 @@
 #set( $symbol_dollar = '$' )
 #set( $symbol_escape = '\' )
 #if ($reddeer_version == "2.9.0" )
-#set( $rd_repository = 'http://download.eclipse.org/reddeer/releases/2.9.0/' )
+#set( $rd_repository = 'https://download.eclipse.org/reddeer/releases/2.9.0/' )
 #else
-#set ( $rd_repository = 'http://download.eclipse.org/reddeer/snapshots/' )
+#set ( $rd_repository = 'https://download.eclipse.org/reddeer/snapshots/' )
 #end
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0"
@@ -36,7 +36,7 @@
 		<repository>
 			<id>${eclipse_platform}</id>
 			<layout>p2</layout>
-			<url>http://download.eclipse.org/releases/${eclipse_platform}</url>
+			<url>https://download.eclipse.org/releases/${eclipse_platform}</url>
 		</repository>
 		<repository>
 			<id>RedDeer</id>
@@ -48,7 +48,7 @@
 	<pluginRepositories>
 		<pluginRepository>
 			<id>sonatype-public</id>
-			<url>http://repository.sonatype.org/content/groups/sonatype-public-grid</url>
+			<url>https://repository.sonatype.org/content/groups/sonatype-public-grid</url>
 		</pluginRepository>
 	</pluginRepositories>
 
