--- a/pom.xml
+++ b/pom.xml
@@ -22,8 +22,8 @@
 	<properties>
 		<tycho-version>1.6.0</tycho-version>
 		<tychoExtrasVersion>${tycho-version}</tychoExtrasVersion>
-		<eclipse-target-site>http://download.eclipse.org/staging/2020-03/</eclipse-target-site>
-		<swtbot-update-site>http://download.eclipse.org/technology/swtbot/snapshots/</swtbot-update-site>
+		<eclipse-target-site>https://download.eclipse.org/staging/2020-03/</eclipse-target-site>
+		<swtbot-update-site>https://download.eclipse.org/technology/swtbot/snapshots/</swtbot-update-site>
 		<eclipse-orbit-update-site>https://download.eclipse.org/tools/orbit/downloads/drops/R20200224183213/repository</eclipse-orbit-update-site>
 		<cbi-repo-site>https://repo.eclipse.org/content/repositories/cbi-releases/</cbi-repo-site>
 		<download-plugin-version>1.2.1</download-plugin-version>
