--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,14 @@
 		<outputDirectory>bin</outputDirectory>
 		<plugins>
 			<plugin>
+			   <groupId>org.eclipse.tycho</groupId>
+			   <artifactId>tycho-compiler-plugin</artifactId>
+			   <version>${tycho-version}</version>
+			   <configuration>
+			      <useProjectSettings>false</useProjectSettings>
+			   </configuration>
+			</plugin>
+			<plugin>
 				<groupId>org.eclipse.tycho</groupId>
 				<artifactId>tycho-maven-plugin</artifactId>
 				<version>${tycho-version}</version>
