Include all neccessary bundles into reddeer p2 update site, fixes #2138
Signed-off-by: Ondrej Dockal <odockal@redhat.com>

--- a/features/org.eclipse.reddeer.tests.feature/pom.xml
+++ b/features/org.eclipse.reddeer.tests.feature/pom.xml
@@ -37,6 +37,11 @@
 						</goals>
 					</execution>
 				</executions>
+                <configuration>
+                    <excludes>
+                   		<plugin id="org.json" />
+                    </excludes>
+                </configuration>
 			</plugin>
 			<plugin>
 				<groupId>org.eclipse.tycho</groupId>
