Add installation of one p2 site at once, fixes #2140
Signed-off-by: Ondrej Dockal <odockal@redhat.com>

--- a/tests/org.eclipse.reddeer.integration.test/pom.xml
+++ b/tests/org.eclipse.reddeer.integration.test/pom.xml
@@ -25,8 +25,9 @@
 	</parent>
 
 	<properties>
-		<customArgLine>-Dupdate.site=${update.site}</customArgLine>
+		<customArgLine>-Dupdate.site=${update.site} -Dp2.only=${p2.only}</customArgLine>
 		<update.site></update.site>
+		<p2.only></p2.only>
 		<eclipseProfile>epp.package.jee</eclipseProfile>
 		<testProduct>org.eclipse.platform.ide</testProduct>
 		<skipITests>true</skipITests>
