Change workflow to build and compile only
Add java 17 as runtime configuration

--- a/.github/workflows/build_test.yml
+++ b/.github/workflows/build_test.yml
@@ -14,7 +14,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest]
-        java: ["11"]
+        java: ["11", "17"]
       fail-fast: false
 
     steps:
@@ -24,7 +24,7 @@ jobs:
         ref: ${{ github.event.pull_request.head.sha }}
         fetch-depth: 0
 
-    # Java JDK 11 used for maven build
+    # Java JDK 11 and 17 used for maven build
     - name: Setup Java ${{ matrix.java }}
       uses: actions/setup-java@v1
       with:
@@ -58,15 +58,16 @@ jobs:
     - name: Run unit tests
       uses: GabrielBB/xvfb-action@v1
       with:
-        run: mvn verify -U -fae -Dmaven.test.error.ignore=true -Dmaven.test.failure.ignore=true
+        run: mvn install -U -fae -DskipTests=true
+#         run: mvn verify -U -fae -Dmaven.test.error.ignore=true -Dmaven.test.failure.ignore=true
 
     # Archive artifacts to be applied in Publish Reports workflow
-    - name: Archiving test artifacts
-      uses: actions/upload-artifact@v2
-      with: 
-        name: ${{ matrix.os }}-test-reports
-        path: |
-          *tests/*/target/surefire-reports/
-          */*tests/*/target/surefire-reports/
-          **/*.log
-          **/*.png
+#     - name: Archiving test artifacts
+#       uses: actions/upload-artifact@v2
+#       with: 
+#         name: ${{ matrix.os }}-test-reports
+#         path: |
+#           *tests/*/target/surefire-reports/
+#           */*tests/*/target/surefire-reports/
+#           **/*.log
+#           **/*.png
