--- a/.github/workflows/build_test.yml
+++ b/.github/workflows/build_test.yml
@@ -14,7 +14,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest]
-        java: ["11", "17"]
+        java: ["17"]
       fail-fast: false
 
     steps:
