--- a/plugins/org.eclipse.reddeer.junit/pom.xml
+++ b/plugins/org.eclipse.reddeer.junit/pom.xml
@@ -21,4 +21,14 @@
 		<artifactId>plugins</artifactId>
 		<version>4.6.0-SNAPSHOT</version>
 	</parent>
+	
+	<dependencies>
+		<!-- https://mvnrepository.com/artifact/org.yaml/snakeyaml -->
+		<dependency>
+		    <groupId>org.yaml</groupId>
+		    <artifactId>snakeyaml</artifactId>
+		    <version>2.0</version>
+		</dependency>
+	</dependencies>
+
 </project>
